playbooks/roles/iperf/templates/client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: iperf3-client
  namespace: iperf3
spec:
  selector:
    app: iperf3-client
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
